[package]
name = "rdedup-cdc"
version = "0.1.0"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>", "Dawid Ciężarkiewicz <dpc@dpc.pw>"]
repository = "https://github.com/aidanhs/rsroll"
documentation = "http://aidanhs.github.io/rsroll/"
readme = "README.md"
description = "Content defined chunking (and rolling hash) algos"
license = "BSD-3-Clause"

[features]
default = []
bench = []

[profile.bench]
opt-level = 3
debug = true
lto = true
debug-assertions = false

[dev-dependencies]
rand = "0.3"
